--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -32,5 +32,5 @@ jobs:
       - name: Build the package
         run: poetry build
 
-      - name: Publish to PyPI
-        run: poetry publish --build
+      - name: Publish package distributions to PyPI
+        uses: pypa/gh-action-pypi-publish@release/v1
