--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -23,7 +23,7 @@ jobs:
 
       - name: Install Poetry
         run: |
-          curl -sSL https://install.python-poetry.org | python3 -
+          pip3 install poetry
           echo "${HOME}/.local/bin" >> $GITHUB_PATH
 
       - name: Install dependencies
